--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #c3e0c5;
+  color: #2f3a36;
+}
+
 heading {
   width: 960px;
 }
@@ -11,10 +17,10 @@ div {
   width: 200px;
 }
 
-#grayson {
-  display: float-left;
+img {
+  border: 0.5px solid black;
 }
 
-#keeley {
-  display: float-left;
+header img {
+  border-radius: 5px;
 }
