--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #c3e0c5;
   color: #2f3a36;
+  max-width: 960px;
+  text-align: center;
 }
 
-heading {
-  width: 960px;
+header {
+  max-width: 960px;
+  text-align: center;
 }
 
 form {
@@ -23,4 +26,16 @@ img {
 
 header img {
   border-radius: 5px;
+}
+
+#answers {
+  text-align: center;
+}
+
+main {
+  width: 960px;
+}
+
+#questions {
+  text-align: center;
 }
