--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #c3e0c5;
   color: #2f3a36;
-  max-width: 960px;
+  width: 960px;
   text-align: center;
+  background-color: #c3e0c5;
 }
 
 header {
@@ -26,6 +26,7 @@ img {
 
 header img {
   border-radius: 5px;
+  padding: 1px;
 }
 
 #answers {
