--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #2f3a36;
-  width: 960px;
-  text-align: center;
   background-color: #c3e0c5;
 }
 
+.container {
+  width: 960px;
+}
+
 header {
-  max-width: 960px;
   text-align: center;
 }
 
@@ -39,6 +40,7 @@ main {
 
 #questions {
   text-align: center;
+  width: 700px;
 }
 
 #answer1,
@@ -61,4 +63,11 @@ main {
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
+}
+
+#grayson,
+#jade,
+#keeley,
+#morgan {
+  display: inline-block;
 }
