--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: #2f3a36;
   background-color: #c3e0c5;
+  max-width: 960px;
+  text-align: center;
 }
 
 header {
   text-align: center;
+  background: rgba(20, 30, 26, .25);
+  padding: 5px;
 }
 
 form {
