--- a/style.css
+++ b/style.css
@@ -129,9 +129,6 @@ main {
   margin: 5px;
 }
 
-div #play {
-  display: inline-block;
-  text-align: center;
-  margin: 10px;
-  
+#play {
+  margin: auto;
 }
