--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
   text-align: center;
-  background: rgba(20, 30, 26, .25);
+  background: rgba(20, 30, 26, .15);
   padding: 5px;
   overflow: hidden;
 }
@@ -27,7 +27,7 @@ img {
 }
 
 header img {
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 5px 0px;
   background-color: white;
   float: left;
@@ -39,12 +39,23 @@ header img {
   text-align: center;
 }
 
+h1 {
+  font-weight: 900;
+  font-size: 3em;
+}
+
+h2 {
+  font-weight: 600;
+}
+
 h3 {
   width: 375px;
-  font-size: 1.1em;
+  font-size: 1.3em;
   line-height: 1.25em;
   text-align: center;
   margin: auto;
+  font-weight: 300;
+
 }
 
 main {
@@ -110,10 +121,19 @@ main {
   margin: 30px;
   text-decoration: none;
   color: #2f3a36;
+  font-size: 20px;
+  font-weight: 100;
+
 }
 
 #user-form {
-  margin: 30px;
+  margin: 20px;
+}
+
+#username {
+  font-size: 1em;
+  padding: 7px;
+  border: 0.5px solid #2f3a36;;
 }
 
 #avatars {
@@ -127,8 +147,18 @@ main {
 #beer-mug {
   display: inline-block;
   margin: 5px;
+  height: 55px;
+  width: auto;
 }
 
-#play {
-  margin: auto;
+#play,
+#submit {
+  padding: 10px;
+  border-radius: 2px;
+  margin: 15px;
+  font-size: 1em;
+  border: .5px solid #2f3a36;
+  background-color: #2f3a36;
+  color:  #c3e0c5;
+  background: rgba(20, 30, 26, .75);
 }
